fixed align of my events page

--- a/public/src/assets/css/myevents.css
+++ b/public/src/assets/css/myevents.css
@@ -72,7 +72,7 @@
   padding: 2rem 2rem 3rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
